# nornir-pyre

./: .gitignore  Console_Debug_Output.txt  README.rst  ez_setup.py  nornir-pyre.pyproj  pyproject.toml  requirements-v1.5.2.txt  setup.py  setup2.py  testwxdrop.py  wxDemo.py
pyre/: PyreGui.py  README.txt  __init__.py  __main__.py  command_interfaces.py  commandhistory.py  common.py  config.yaml  container.py  eventmanager.py  launcher.py  resource_paths.py  resources.py  selection_event_data.py  settings.json  settings.json.bak  shader_base.py  shaders.py  space.py  state.py  stos_container.py  texture_vertex_buffer.py  tileexportwindow.py  wxevents.py
pyre/commands/: __init__.py  callcontrolpointtomousecommand.py  camera_command.py  command_base.py  commandbase.py  commandexceptions.py  container_overrides.py  control_point_command_container.py  control_point_region.py  defaultstoscommand.py  defaulttransformcommand.py  extensions.py  interfaces.py  navigationcommandbase.py  rectangle_command.py  togglecontrolpointselectioncommand.py  uicommandbase.py
pyre/commands/stos/: __init__.py  createcontrolpointcommand.py  createregistercontrolpointcommand.py  deletecontrolpointcommand.py  gridtransformactionmap.py  registercontrolpointcommand.py  rigidtransformactionmap.py  translatecontrolpointcommand.py  translaterigidcommand.py  triangulationtransformactionmap.py
pyre/controllers/: __init__.py  transformcontroller.py
pyre/gl_engine/: __init__.py  dynamic_vao.py  framebuffer.py  gl_buffer.py  helpers.py  instanced_vao.py  interfaces.py  shader_base.py  shader_vao.py  shaders.py  texture_vertex_buffer.py  textures.py  vertex_attribute.py  vertexarraylayout.py
pyre/gl_engine/shaders/: __init__.py  color_shader.py  controlpointset_shader.py  overlay_shader.py  pointset_shader.py  shader_base.py  texture_shader.py  transform_shader.py
pyre/interfaces/: __init__.py  action.py  controlpointselection.py  eventmanager.py  named_tuples.py  readonlycamera.py  viewtype.py
pyre/interfaces/managers/: __init__.py  buffertype.py  command_history.py  command_manager.py  command_queue.py  controlpointmapmanager.py  gl_context_manager.py  image_manager.py  image_viewmodel_manager.py  mousepositionhistorymanager.py  region_manager.py  transformcontroller_glbuffer_manager.py  window_manager.py
pyre/observable/: __init__.py  observedaction.py  olist.py  oset.py
pyre/resources/: __init__.py  point_textures.py  utils.py
pyre/settings/: __init__.py  app.py  pointregistration.py
pyre/state/: __init__.py  action.py  eventmanager.py  events.py  gl_context_manager.py  image_manager.py  image_viewmodel_manager.py  imageloader.py  interfaces.py  mosaic.py  mousepositionhistorymanager.py  roi_manager.py  stos.py  transform_manager.py  transformcontroller_glbuffer_manager.py  window_manager.py
pyre/state/managers/: __init__.py  command_history.py  command_queue.py  controlpointcommandmanager.py  controlpointmapmanager.py  gl_context_manager.py  image_manager.py  image_viewmodel_manager.py  mousepositionhistorymanager.py  region_manager.py  transformcontroller_glbuffer_manager.py  window_manager.py
pyre/ui/: __init__.py  camera.py  camera_command.py  camerastatusbar.py  command_base.py  glpanel.py  glpanel.py.bak  grid_transform_settings_dialog.py  imagetransformpanel.py  imagetransformpanelbase.py  imagetransformviewpanel.py  mosaictransformpanel.py  rectangle_command.py  refine_grid_settings_dialog.py  wxevents.py
pyre/ui/events/: __init__.py  gl_context_created_event.py  invoke_on_main_thread_event.py
pyre/ui/widgets/: __init__.py  camerastatusbar.py  glpanel.py  glpanel.py.bak  imagetransformpanelbase.py  imagetransformviewpanel.py  mosaictransformpanel.py
pyre/ui/windows/: __init__.py  filedrop.py  grid_transform_settings_dialog.py  mosaicwindow.py  pyrewindows.py  refine_grid_settings_dialog.py  stoswindow.py  textdrop.py
pyre/viewmodels/: __init__.py  controlpointmap.py  imageviewmodel.py  mosaicviewmodel.py  transformcontroller.py  transformglviewmodel.py
pyre/views/: __init__.py  compositetransformview.py  controlpoint_view.py  gltiles.py  imagegridtransformview.py  imagetransformview.py  interfaces.py  mosaicview.py  pointset_view.py  pointview.py  transformcontrollerview.py
scripts/: start_pyre.py
